<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            app:srcCompat="@drawable/logomain" />

        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#ffbd59"
            android:text="@string/text_bouton_jouer"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffbd59"
            android:layout_margin="15dp"
            android:text="@string/text_bouton_scores"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_apropos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffbd59"
            android:layout_margin="15dp"
            android:text="@string/text_bouton_apropos"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffbd59"
            android:layout_margin="15dp"
            android:text="@string/text_bouton_guide"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>