<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_score"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="100dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewScore">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textinputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="100dp"
                android:hint="@string/text_saisie_nom" />

            <Button
                android:id="@+id/button_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_save" />
        </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>